# candy

./: .gitignore  .tyx  Cross.toml  LICENSE-MIT  README.md
.codebuddy/memory/: 2026-07-08.md  2026-07-09.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md
docs/reference/: README.md  cli.md  codecs.md  counters.md  directives.md  easing.md  errors.md  rust-api.md
docs/tutorial/: README.md  animation-basics.md  first-clip.md  output.md  scenes-camera-groups.md  subtitles-counters.md  transforms.md
examples/: audio_demo.tyx  box_anim.tyx  camera_tour.tyx  composite_demo.tyx  constellation.tyx  custom_page.tyx  data_viz.tyx  dot_move.tyx  easing_showcase.tyx  full_demo.tyx  geometric_construction.tyx  manim_features.tyx  math_derivation.tyx  modules_demo.tyx  morph_demo.tyx  no_candy.tyx  orbit_demo.tyx  pillars_demo.tyx  play_demo.tyx  preview_demo.tyx  projectile_demo.tyx  rotate_fade.tyx  showcase.tyx  test_all_directives.tyx  timing_demo.tyx  transform_demo.tyx  video_placeholder_demo.tyx  zoom_transition_demo.tyx
examples/by-feature/: animate.tyx  appear.tyx  audio.tyx  blink.tyx  camera.tyx  ecounter.tyx  fade_transform.tyx  flash.tyx  focus_on.tyx  group.tyx  helpers.tyx  indicate.tyx  mobject.tyx  morph.tyx  move_along_path.tyx  pause.tyx  play.tyx  restore.tyx  reveal.tyx  save_state.tyx  scene.tyx  set_color.tyx  spiral_in.tyx  subtitle.tyx  subtitle_color.tyx  track.tyx  transform.tyx  transition.tyx  typewriter.tyx  video.tyx  wiggle.tyx  zoom_to.tyx
examples/expected-to-fail/: wrong_version.tyx
rust/: Cargo.toml  LICENSE  LICENSE-APACHE  README.md  build.rs
rust/docs/: architecture.md  flubber-port-analysis.md
rust/src/: lib.rs  main.rs
rust/src/core/: ast.rs  diag.rs  easing.rs  error.rs  interpolator.rs  meta.rs  mod.rs  morph.rs  scheduler.rs
rust/src/math/: mod.rs
rust/src/parser/: ast_walk.rs  directives.rs  dsl.rs  expr.rs  mod.rs  svg.rs  tyx.rs
rust/src/renderer/: audio.rs  container.rs  ffmpeg.rs  gpu.rs  h264.rs  mod.rs  rav1e.rs  typst.rs  video.rs
rust/src/renderer/audio/: audio.rs  mod.rs
rust/src/renderer/encode/: container.rs  ffmpeg.rs  h264.rs  libva.rs  libva_imp.rs  mod.rs  rav1e.rs  video.rs
rust/src/renderer/encode/libva/: imp.rs
rust/src/renderer/raster/: cpu.rs  gpu.rs  mod.rs
rust/src/renderer/typst/: camera.rs  composite.rs  content.rs  flow.rs  frame.rs  lru.rs  matrix.rs  mod.rs  morph.rs  natural.rs  pages.rs  source.rs  svg.rs  transform.rs  world.rs
typst/: README.md  typst.toml
typst/src/: animation.typ  composite.typ  constants.typ  core.typ  counter.typ  lib.typ  manim.typ  mobject.typ  scene.typ  subtitle.typ  utils.typ  validation.typ
